--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
     <html>
     <head>
       <meta charset='utf-8'>
@@ -17,9 +17,9 @@
                   to translate the app into other languages, or make derivative
                   versions. The app itself, and all the trade marks, copyright,
                   database rights and other intellectual property rights related
-                  to it, still belong to [Developer/Company name].
+                  to it, still belong to Kaskeru Games.
                 </p> <p>
-                  [Developer/Company name] is committed to ensuring that the app is
+                  Kaskeru Games is committed to ensuring that the app is
                   as useful and efficient as possible. For that reason, we
                   reserve the right to make changes to the app or to charge for
                   its services, at any time and for any reason. We will never
@@ -27,7 +27,7 @@
                   clear to you exactly what you’re paying for.
                 </p> <p>
                   The BrainMonster app stores and processes personal data that
-                  you have provided to us, in order to provide [my/our]
+                  you have provided to us, in order to provide Kaskeru
                   Service. It’s your responsibility to keep your phone and
                   access to the app secure. We therefore recommend that you do
                   not jailbreak or root your phone, which is the process of
@@ -44,10 +44,10 @@
                     providers used by the app
                   </p> <ul><li><a href="https://policies.google.com/terms" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><li><a href="https://developers.google.com/admob/terms" target="_blank" rel="noopener noreferrer">AdMob</a></li><li><a href="https://firebase.google.com/terms/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><li><a href="https://firebase.google.com/terms/crashlytics" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li><!----><!----><!----><!----><!----><!----><!----><li><a href="https://unity3d.com/legal/terms-of-service" target="_blank" rel="noopener noreferrer">Unity</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p>
                   You should be aware that there are certain things that
-                  [Developer/Company name] will not take responsibility for. Certain
+                  Kaskeru Games will not take responsibility for. Certain
                   functions of the app will require the app to have an active
                   internet connection. The connection can be Wi-Fi, or provided
-                  by your mobile network provider, but [Developer/Company name]
+                  by your mobile network provider, but Kaskeru Games
                   cannot take responsibility for the app not working at full
                   functionality if you don’t have access to Wi-Fi, and you don’t
                   have any of your data allowance left.
@@ -65,18 +65,18 @@
                   using the app, please be aware that we assume that you have
                   received permission from the bill payer for using the app.
                 </p> <p>
-                  Along the same lines, [Developer/Company name] cannot always take
+                  Along the same lines, Kaskeru Games cannot always take
                   responsibility for the way you use the app i.e. You need to
                   make sure that your device stays charged – if it runs out of
                   battery and you can’t turn it on to avail the Service,
-                  [Developer/Company name] cannot accept responsibility.
+                  Kaskeru Games cannot accept responsibility.
                 </p> <p>
-                  With respect to [Developer/Company name]’s responsibility for your
+                  With respect to Kaskeru Games’s responsibility for your
                   use of the app, when you’re using the app, it’s important to
                   bear in mind that although we endeavour to ensure that it is
                   updated and correct at all times, we do rely on third parties
                   to provide information to us so that we can make it available
-                  to you. [Developer/Company name] accepts no liability for any
+                  to you. Kaskeru Games accepts no liability for any
                   loss, direct or indirect, you experience as a result of
                   relying wholly on this functionality of the app.
                 </p> <p>
@@ -85,7 +85,7 @@
                   system(and for any additional systems we
                   decide to extend the availability of the app to) may change,
                   and you’ll need to download the updates if you want to keep
-                  using the app. [Developer/Company name] does not promise that it
+                  using the app. Kaskeru Games does not promise that it
                   will always update the app so that it is relevant to you
                   and/or works with the AndroidとiOS version that you have
                   installed on your device. However, you promise to always
@@ -97,16 +97,16 @@
                   (b) you must stop using the app, and (if needed) delete it
                   from your device.
                 </p> <p><strong>Changes to This Terms and Conditions</strong></p> <p>
-                  [I/We] may update our Terms and Conditions
+                  Kaskeru may update our Terms and Conditions
                   from time to time. Thus, you are advised to review this page
-                  periodically for any changes. [I/We] will
+                  periodically for any changes. Kaskeru will
                   notify you of any changes by posting the new Terms and
                   Conditions on this page.
                 </p> <p>
                   These terms and conditions are effective as of 2021-02-20
                 </p> <p><strong>Contact Us</strong></p> <p>
-                  If you have any questions or suggestions about [my/our]
-                  Terms and Conditions, do not hesitate to contact [me/us]
+                  If you have any questions or suggestions about Kaskeru
+                  Terms and Conditions, do not hesitate to contact Kaskeru
                   at kaskeru.games@gmail.com.
     </body>
     </html>
